# VoxTomat-ESP32-S3-AI-Voice-Study-Companion

./: .gitignore  ChangeLog.md  README.md  sdkconfig
components/BSP/: CMakeLists.txt
components/BSP/I2S/: i2s.c  i2s.h
components/BSP/LCD/: lcd.c  lcd.h
components/BSP/LV_DRIVER/: lv_port_disp.c  lvgl_port.c  lvgl_port.h
components/BSP/SPI/: spi.c  spi.h
components/BSP/UI/: JetBrainsMono_BoldItalic_14px.c  JetBrainsMono_BoldItalic_94px.c  SourceHanSerifCN_Regular_1_14px.c  SourceHanSerifCN_Regular_1_3500chi_14px.c  SourceHanSerifCN_Regular_1_3500chi_16px.c  app.c  app.h  gradient_text.c  gradient_text.h  voxtomat.c  voxtomat.h
components/Middlewares/: CMakeLists.txt
components/Middlewares/ASR/: asr.c  asr.h
components/Middlewares/DATE/: date.c  date.h
components/Middlewares/LLM/: llm.c  llm.h
components/Middlewares/SCHEDULE/: schedule.c  schedule.h
components/Middlewares/SR/: sr_engine.c  sr_engine.h  sr_event.h  sr_model.c  sr_model.h  sr_session.h
components/Middlewares/TTS/: tts.c  tts.h
components/Middlewares/WIFI/: wifi.c  wifi.h
main/: idf_component.yml  main.c
